--- a/index.ipynb
+++ b/index.ipynb
@@ -1178,14 +1178,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
-    "    return distance"
+    "    return distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))"
    ]
   },
   {
