--- a/index.ipynb
+++ b/index.ipynb
@@ -1178,13 +1178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-3fff42a0014a>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-3fff42a0014a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return distance math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    return distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))"
+    "    return distance math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))"
    ]
   },
   {
