--- a/index.ipynb
+++ b/index.ipynb
@@ -1312,21 +1312,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-476ad76ed984>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-476ad76ed984>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    remaining_neighbors = list(filter(lambda neighbor : neighbor != first_neighbor, neighbors)))\u001b[0m\n\u001b[0m                                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    remaining_neighbors = list(filter(lambda neighbor : neighbor != first_neighbor, neighbors)))\n",
+    "    remaining_neighbors = list(filter(lambda neighbor : neighbor != first_neighbor, neighbors))\n",
     "    return list(map(lambda neighbor : distance_with_neighbors(first_neighbor, neighbors), remaining_neighbors))"
    ]
   },
