--- a/index.ipynb
+++ b/index.ipynb
@@ -1046,12 +1046,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return abs(first_neighbor['street'] - second_neighbor['street'])"
+    "    return first_neighbor['street'] - second_neighbor['street']"
    ]
   },
   {
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
