--- a/index.ipynb
+++ b/index.ipynb
@@ -1366,7 +1366,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    distance_all(first_neighbor, neighbors)\n",
+    "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
     "    neighbors.sort(key = distance)\n",
     "    return neighbors"
    ]
