Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1366,9 +1366,10 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
+    "    number = number or number = len(neighbors)\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
-    "    neighbors.sort(key = distance)\n",
-    "    return neighbors"
+    "    number\n",
+    "    return neighbors_sort[:number]"
    ]
   },
   {
