--- a/index.ipynb
+++ b/index.ipynb
@@ -1368,7 +1368,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number or number = len(neighbors)\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
-    "    number\n",
+    "    neighbors_sort = sorted(neighbor_distances)\n",
     "    return neighbors_sort[:number]"
    ]
   },
