Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1361,14 +1361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    number = number or number = len(neighbors)\n",
+    "    number = number or len(neighbors)\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
-    "    neighbors_sort = sorted(neighbor_distances, lambda distance : distance)\n",
+    "    neighbors_sort = sorted(neighbor_distances, lambda distance : neighbors['distance'])\n",
     "    return neighbors_sort[:number]"
    ]
   },
