--- a/index.ipynb
+++ b/index.ipynb
@@ -1374,17 +1374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'name': 'Suzie', 'avenue': 1, 'street': 11},\n",
-       " {'name': 'Bob', 'avenue': 5, 'street': 8}]"
+       " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
